criado o titulo da pafina e o primeiro paragrafo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Explorando a Europa</title>
 </head>
 <body>
-    
+    <h1>Explorando a Europa</h1>
+    <p>"Se você já sonhou em caminhar pelas ruas de Paris, saborear autênticas massas italianas ou explorar os castelos alemães, este é o lugar certo para você. Nossa missão é inspirar e guiar você em sua jornada pela Europa, apresentando os países mais encantadores e suas joias culturais. Prepare-se para se apaixonar por cada cidade, cada paisagem e cada sabor. "</p>
 </body>
 </html>
